--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: black  ;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
