--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sivaprakash P | Yet another Curious and Passionate CS student</title>
+  <!-- Author -->
+  <meta name="author" content="Sivaprakash P" />
+  <!-- Website Theme -->
+  <meta name="theme-color" content="#000000"/>
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -13,7 +18,7 @@
     rel="stylesheet">
 </head>
 
-<body style="background-color: black  ;">
+<body style="background-color: black;">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
